Fix explore page view on mobile

--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -401,6 +401,11 @@
             padding-top: 0px;
         }
 
+        .total-listen-time {
+            margin-left: 0px;
+            margin-bottom: 50px;
+        }
+
         // Song details
         > div {
             /* display: grid !important; */
